# AI-News-Bot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  telegram_proxy_worker.js  test_apify.py  test_llm_providers.py
.github/workflows/: ci.yml
modules/: __init__.py  apify_fetcher.py  db.py  dedup.py  dispatcher.py  fetcher.py  formatter.py  llm.py  scheduler.py  sender.py  youtube_fetcher.py
tests/: conftest.py  run_all_tests.py  test_arxiv.py  test_hn.py  test_reddit.py  test_rss_feed.py  test_twitter.py  test_youtube.py
