[project]
name = "ai-news-bot"
version = "3.0.0"
description = "Autonomous AI news intelligence system — 6 sources, 6-provider LLM fallback, Telegram delivery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "B.V Manoj" },
]
keywords = ["telegram", "news", "ai", "llm", "rss", "youtube"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Topic :: News/Diaries",
]

dependencies = [
    "feedparser>=6.0",
    "praw>=7.8",
    "google-generativeai>=0.8",
    "python-telegram-bot>=22.0",
    "APScheduler>=3.10",
    "aiohttp>=3.10",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "httpx>=0.27",
    "yt-dlp>=2024",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/Venkata-Manoj/AI-News-Bot"
Repository = "https://github.com/Venkata-Manoj/AI-News-Bot"
Issues = "https://github.com/Venkata-Manoj/AI-News-Bot/issues"

[project.scripts]
ai-news-bot = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.setuptools.package-data]
modules = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
